--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>Le jeu du clivage</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
@@ -13,6 +13,6 @@
 	<script defer src='/build/bundle.js'></script>
 </head>
 
-<body>
+<body class="h-full w-full m-0 p-0">
 </body>
 </html>
