--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
 	<script defer src='/build/bundle.js'></script>
 </head>
 
-<body class="h-full w-full">
+<body class="bg-background flex h-full w-full">
 </body>
 </html>
